style.css
html, body {
    width: 100%;
   
    margin: 0;
    padding: 0;
    overflow-x: hidden;

    background-color: rgb(27, 27, 27);
    /* background-image: url("assets/texture_bg.jpg"); */
    /* background-repeat: no-repeat; */
    z-index: 5;

  }


  .seeRails {
    background-color: red;

  }

  a {
    text-decoration: none;
  }
  a:hover {
    text-decoration: none;
  }

  .allDivs {
    background-image: url(assets/GTT_webBG_vert.jpg);
    /* background-position: top center; */
    /* height: 100vh; */
    /* height: 100vw; */
    /* background-attachment: fixed; */
    background-size: cover;
    z-index: 7;
  }

    
  
  /* ===================Head of Page======================== */
  
  .font1 {
    font-family: serif;
    transform: scale(1, .95);
    /* font-style: italic; */
    
  }

  .font2 {
    letter-spacing: 1.5px;
    font-weight: bold;
  }
  .titleWrapper {
      /* background-color: rgb(224, 214, 71); */
      color: rgb(255, 255, 255);
  }

  /* .title {
    font-size: 4vw;
    margin: 7% auto 1% auto;
    text-align: center;
    
    color: rgb(77, 177, 202);
    font-size: 5vw;
    letter-spacing: 10px;
    width: 80%;
  } */

  .titleText {
    font-size: 8vw;
    color: rgb(228, 236, 109);
    /* margin: 35% 10% 20% 10%; */
    margin: 20% auto 5% auto;
    text-align: center;
    letter-spacing: 10px;

    font-family: acier-bat-outline, sans-serif;
    font-weight: 400;
    font-style: normal;
    text-shadow: -10px 20px 30px #2a3f49de;
  }


  .titleText1 {
    font-size: 8vw;
    color: rgb(228, 236, 109);
    letter-spacing: 10px;
    margin: 22% auto 0 auto;
    align-content: center;
    text-align: center;

    font-family: acier-bat-outline, sans-serif;
    font-weight: 400;
    font-style: normal;
    text-shadow: -10px 20px 30px #2a3f49de;
  }
  .titleText2 {
    font-size: 8vw;
    color: rgb(228, 236, 109);
    letter-spacing: 10px;
    margin: -1.5% auto -1.5% auto; 
    /* margin: auto; */
    align-content: center;
    text-align: center;

    font-family: acier-bat-outline, sans-serif;
    font-weight: 400;
    font-style: normal;
    text-shadow: -10px 20px 30px #2a3f49de;
  }
  .titleText3 {
    font-size: 8vw;
    color: rgb(228, 236, 109);
    letter-spacing: 10px;
    margin: 0 auto 5% auto;
    align-content: center;
    text-align: center;

    font-family: acier-bat-outline, sans-serif;
    font-weight: 400;
    font-style: normal;
    text-shadow: -10px 20px 30px #2a3f49de;
  }


  .subtitleText {
    font-size: 2vw;
    color: rgb(224, 235, 78);
    /* margin: 35% 10% 20% 10%; */
    margin: auto;
    text-align: center;

    /* font-family: acier-bat-outline, sans-serif;
    font-weight: 400;
    font-style: normal; */


    font-family: acier-bat-solid, sans-serif;
    font-weight: 400;
    font-style: normal;
  }

  .subtitleArrow {
    font-size: 2vw;
    color: rgba(225, 235, 78, 0.404);
    /* margin: 35% 10% 20% 10%; */
    margin: auto;
    text-align: center;

    font-family: acier-bat-solid, sans-serif;
    font-weight: 400;
    font-style: normal;
  }
  /* .title:hover {
    color: rgb(216, 214, 75);
     
    
  } */
  

  /* .subtitle {
    font-size: 1vw;
    margin: 0 auto 2% auto;
    text-align: center;
    text-transform: uppercase;
    color: rgb(202, 162, 77);
    
  } */
.podDescription {
  font-size: 1.5vw;
  /* color: rgb(204, 125, 149); */
  color: rgb(202, 162, 77);
  margin: 15% auto;
    text-align: center;
    font-family: acier-bat-solid, sans-serif;
}

  .contact {
    font-size: 2vw;
    color: rgb(204, 125, 149);
    /* color: rgb(202, 162, 77); */
    /* margin: 35% 10% 20% 10%; */
    margin: 15% auto;
    text-align: center;
    font-family: acier-bat-solid, sans-serif;
  }

  .contactEmail {
    margin: 0 3% 0 0;
  }



 
  .topA {
      margin: 7% auto;
      padding: 10% 3%;
      font-size: 1.7vw;
      color: rgb(65, 150, 172);

      /* background-color: red; */
  }
  .topB {
      margin: 7% auto;
      /* padding: 10% 3%; */
      font-size: 1vw;
      color: rgb(202, 162, 77);

      /* background-color: red; */
  }




  .gttImage {
    width: 100%;
    /* height: 33%; */
    /* margin: 0 auto; */
    box-shadow: 10px 10px 30px #00000055;
    z-index: 4;
  }

  .rowOne {
    
    /* background-image: url(assets/GTT_webBG-small.jpg);
    background-position: center center;
    height: 100vh; */
    
  }

  .rowOneHalf {
    
    /* background-color:rgb(18, 45, 75); */
   
    /* background-image: linear-gradient(to right, rgb(197, 197, 186),rgb(241, 241, 241), rgb(189, 189, 189)); */
    /* box-shadow: 0px 3px 40px #00000055; */
    
    /* height: 50vh; */
  }


  .buzzPlayer {
    margin: 10% auto;
    
  }



  .linkCity {
    /* text-align: center;
    align-content: center;
    margin: 2% auto;
    width: 20%; */
  }
  .topLogos {
    text-align: center;
    align-content: center;
    margin: 2% auto;
    transition: width .4s;
    width: 80%;

  }

  .topLogos:hover {
    width: 85%;
  }

  

  .topLinks {
    /* text-align: center;
    align-content: center;
    margin: 2% auto;
    width: 2%; */
  }




  .rowTwo {
    
    /* background-image: linear-gradient(to bottom right, rgb(189, 189, 189), rgb(207, 207, 207), rgb(226, 226, 226),
    rgb(240, 240, 240));
    
    box-shadow: 0px 3px 40px #00000055; */
    
  }

  .enneagramLinkDiv {
    margin: 15% auto 1% auto;
    align-content: center;
    text-align: center;
    
  }
  .enneagramHref {
    font-size: 2vw;
    text-decoration: none;
    color: rgb(202, 162, 77);
    
  }
  .enneagramHref:hover {
    font-size: 2vw;
    text-decoration: none;
    color: rgb(243, 209, 134);
    /* font-weight: bold; */
  }
  .enneaLinkText {
    padding: 5%;
    border-radius: 25px;
    border-style: double;
    text-decoration: none;
    margin: 20%;
  }




  .logFallLinkDiv {
    margin: 1% auto;
    align-content: center;
    text-align: center;
    
  }
/* ... */

